--- a/estilos.css
+++ b/estilos.css
@@ -322,55 +322,21 @@ h2 {
     border: none;
 }
 
-.titulomarcas{
-
-}
 
 .wrapper {
     display: flex;
     padding-top: 20px;
     max-width: 100%;
     position: relative;
-    margin: 0 auto; /* Añade esta línea para centrar horizontalmente */
-    justify-content: center; /* Añade esta línea para centrar horizontalmente */
-    align-items: center; /* Añade esta línea para centrar verticalmente */
+    margin: 0 auto; 
+    justify-content: center; 
+    align-items: center; 
 }
 
-.wrapper i {
-    top: 50%;
-    height: 44px;
-    width: 44px;
-    color: #343F4F;
-    cursor: pointer;
-    font-size: 1.15rem;
-    position: absolute;
-    text-align: center;
-    line-height: 44px;
-    background: #fff;
-    border-radius: 50%;
-    transform: translateY(-50%);
-    transition: transform 0.1s linear;
-}
-
-.wrapper i:active {
-    transform: translateY(-50%) scale(0.9);
-}
-
-.wrapper i:hover {
-    background: #f2f2f2;
-}
-
-.wrapper i:first-child {
-    left: -22px;
-    display: none;
-}
-
-.wrapper i:last-child {
-    right: -22px;
-}
 
 .wrapper .carousel {
     font-size: 0px;
+    max-width: 100%;
     cursor: pointer;
     overflow: hidden;
     white-space: nowrap;
@@ -396,3 +362,47 @@ h2 {
 .carousel img:first-child {
     margin-left: 0px;
 }
+
+
+.container {
+    max-width: 400px;
+    margin: 20px auto;
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  }
+  
+  h1 {
+    text-align: center;
+  }
+  
+  .form-group {
+    margin-bottom: 10px;
+  }
+  
+  label {
+    display: block;
+    margin-bottom: 5px;
+  }
+  
+  input[type="text"],
+  input[type="password"] {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+  }
+  
+  input[type="submit"] {
+    background-color: #dc3545;
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 3px;
+    cursor: pointer;
+  }
+  
+  input[type="submit"]:hover {
+    background-color: #dc3545;
+  }
