--- a/estilos.css
+++ b/estilos.css
@@ -255,6 +255,7 @@ i {
 .aside-right {
     padding-left: 1px;
     padding-right: 0px;
+    border: 2px solid white;
 }
 
 h2 {
@@ -265,6 +266,7 @@ h2 {
     padding: 10px;
     margin-bottom: 5px;
     font-family: ethnocentric rg;
+    border: 2px solid white;
 }
 
 .fixed-bottom {
@@ -324,13 +326,14 @@ h2 {
 
 
 .wrapper {
+    background-color: black;
     display: flex;
     padding-top: 20px;
     max-width: 100%;
     position: relative;
-    margin: 0 auto; 
-    justify-content: center; 
-    align-items: center; 
+    margin: 0 auto;
+    justify-content: center;
+    align-items: center;
 }
 
 
@@ -371,38 +374,38 @@ h2 {
     padding: 20px;
     border-radius: 5px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-  }
-  
-  h1 {
+}
+
+h1 {
     text-align: center;
-  }
-  
-  .form-group {
+}
+
+.form-group {
     margin-bottom: 10px;
-  }
-  
-  label {
+}
+
+label {
     display: block;
     margin-bottom: 5px;
-  }
-  
-  input[type="text"],
-  input[type="password"] {
+}
+
+input[type="text"],
+input[type="password"] {
     width: 100%;
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 3px;
-  }
-  
-  input[type="submit"] {
+}
+
+input[type="submit"] {
     background-color: #dc3545;
     color: #fff;
     padding: 10px 20px;
     border: none;
     border-radius: 3px;
     cursor: pointer;
-  }
-  
-  input[type="submit"]:hover {
+}
+
+input[type="submit"]:hover {
     background-color: #dc3545;
-  }
+}
